Fix text alignment on table header for IE11

--- a/src/components/table/styles.css
+++ b/src/components/table/styles.css
@@ -93,6 +93,10 @@
     text-align: center;
 }
 
+.left {
+    text-align: left;
+}
+
 .responsive {
     display: block;
     overflow-x: auto;
